Update my_class html files by header and footer

--- a/my_class_reserve_small.html
+++ b/my_class_reserve_small.html
@@ -401,7 +401,7 @@
           </div>
 
           <!-- Desktop內容 -->
-          <div class="layout">
+          <div id="layout" class="layout">
             <div class="my-class class-container">
               <div class="my-class-header">
                 <div class="my-class-header-item" data-type="schedule">
@@ -1129,7 +1129,7 @@
                   </div>
                 </div>
               </div>
-              <div class="right">
+              <div id="right" class="right">
                 <!-- tab -->
                 <div class="tab">
                   <div class="tab-item">
@@ -1668,122 +1668,124 @@
                 </div>
               </div>
             </div>
-          </div>
 
-          <div class="clear"></div>
-          <div class="footer">
-            <div class="foo_1">
-              <div class="foo_a1">
-                <div class="foo_a1_f1"></div>
-                <div class="foo_a1_f2">客户保护中心</div>
-                <div class="foo_a1_f3">有任何问题吗？欢迎随时询问。</div>
-                <div class="foo_a1_f3">
-                  <span><a href="#">4006-30-30-30</a></span>
-                  I
-                  <span><a href="#">線上客服</a></span>
+            <div class="clear"></div>
+            <div class="footer">
+              <div class="foo_1">
+                <div class="foo_a1">
+                  <div class="foo_a1_f1"></div>
+                  <div class="foo_a1_f2">客户保护中心</div>
+                  <div class="foo_a1_f3">有任何问题吗？欢迎随时询问。</div>
+                  <div class="foo_a1_f3">
+                    <span><a href="#">4006-30-30-30</a></span>
+                    I
+                    <span><a href="#">線上客服</a></span>
+                  </div>
+                </div>
+                <div class="foo_a2">
+                  <div class="foo_a1_f4"></div>
+                  <div class="foo_a1_f2">新手包</div>
+                  <div class="foo_a1_f5">
+                    <a href="faq.html">常见问答</a>
+                    <a href="teaching.html">新手影片教学</a
+                    ><a
+                      href="http://www.vipabc.com/App/App?type=1"
+                      target="_blank"
+                      >下载学习App</a
+                    ><a href="intro.html">教学平台介绍</a
+                    ><a href="#">關闭快显封锁</a
+                    ><a href="navigation.html">新版地图</a>
+                  </div>
+                </div>
+                <div class="foo_a3">
+                  <div class="foo_spa"></div>
+                  <div class="foo_a1_f6">VIPABC</div>
+                  <div class="foo_a1_f7">
+                    <a
+                      href="http://www.vipabc.com/About/AboutVIPABC"
+                      target="_blank"
+                      >关于VIPABC</a
+                    >
+                    <a href="http://www.vipabc.com/Home/Privacy" target="_blank"
+                      >隐私保护</a
+                    >
+                    <a
+                      href="http://www.vipabc.com/Home/Security"
+                      target="_blank"
+                      >安全条款</a
+                    >
+                    <a href="http://www.vipabc.com/Home/Service" target="_blank"
+                      >服务条款</a
+                    >
+                  </div>
+                  <div class="foo_a1_f7">
+                    <a
+                      href="http://www.vipabc.com/program/recruit/index.asp?"
+                      target="_blank"
+                      >诚征英才</a
+                    ><a href="http://www.vipabc.com/biz" target="_blank"
+                      >企业培训</a
+                    ><a
+                      href="http://www.vipabc.com/Home/ContactUs"
+                      target="_blank"
+                      >联络我们</a
+                    >
+                  </div>
                 </div>
               </div>
-              <div class="foo_a2">
-                <div class="foo_a1_f4"></div>
-                <div class="foo_a1_f2">新手包</div>
-                <div class="foo_a1_f5">
-                  <a href="faq.html">常见问答</a>
-                  <a href="teaching.html">新手影片教学</a
-                  ><a
-                    href="http://www.vipabc.com/App/App?type=1"
-                    target="_blank"
-                    >下载学习App</a
-                  ><a href="intro.html">教学平台介绍</a
-                  ><a href="#">關闭快显封锁</a
-                  ><a href="navigation.html">新版地图</a>
-                </div>
+              <div class="foo_2">
+                <span
+                  ><img
+                    src="images/ico_pa1.png"
+                    width="25"
+                    height="25"
+                  />中国互联网诚信联盟</span
+                >
+                <span
+                  ><img
+                    src="images/ico_pa2.png"
+                    width="25"
+                    height="25"
+                  />网上交易保障中心</span
+                >
+                <span
+                  ><img
+                    src="images/ico_pa3.png"
+                    width="25"
+                    height="25"
+                  />可信网站认证</span
+                >
+                <span
+                  ><img
+                    src="images/ico_pa4.png"
+                    width="25"
+                    height="25"
+                  />诚信网站认证</span
+                >
+                <span
+                  ><img
+                    src="images/ico_pa5.png"
+                    width="25"
+                    height="25"
+                  />经营性网站备案信息</span
+                >
+                <span
+                  ><img
+                    src="images/ico_pa6.png"
+                    width="25"
+                    height="25"
+                  />安全联盟</span
+                >
               </div>
-              <div class="foo_a3">
-                <div class="foo_spa"></div>
-                <div class="foo_a1_f6">VIPABC</div>
-                <div class="foo_a1_f7">
-                  <a
-                    href="http://www.vipabc.com/About/AboutVIPABC"
-                    target="_blank"
-                    >关于VIPABC</a
-                  >
-                  <a href="http://www.vipabc.com/Home/Privacy" target="_blank"
-                    >隐私保护</a
-                  >
-                  <a href="http://www.vipabc.com/Home/Security" target="_blank"
-                    >安全条款</a
-                  >
-                  <a href="http://www.vipabc.com/Home/Service" target="_blank"
-                    >服务条款</a
-                  >
-                </div>
-                <div class="foo_a1_f7">
-                  <a
-                    href="http://www.vipabc.com/program/recruit/index.asp?"
-                    target="_blank"
-                    >诚征英才</a
-                  ><a href="http://www.vipabc.com/biz" target="_blank"
-                    >企业培训</a
-                  ><a
-                    href="http://www.vipabc.com/Home/ContactUs"
-                    target="_blank"
-                    >联络我们</a
-                  >
-                </div>
+              <div class="foo_3">
+                经营许可 : 教职成司函[2011]267号 | 京ICP证090121号 |
+                京ICP备11004351号 | 京公网安备110105019074号 |
+                网络文化经营许可证 京网文[2014]0063-0013号<br />
+                VIPABC.com 版权所有 © 2008-2014 全球领先英语真人外教网
               </div>
             </div>
-            <div class="foo_2">
-              <span
-                ><img
-                  src="images/ico_pa1.png"
-                  width="25"
-                  height="25"
-                />中国互联网诚信联盟</span
-              >
-              <span
-                ><img
-                  src="images/ico_pa2.png"
-                  width="25"
-                  height="25"
-                />网上交易保障中心</span
-              >
-              <span
-                ><img
-                  src="images/ico_pa3.png"
-                  width="25"
-                  height="25"
-                />可信网站认证</span
-              >
-              <span
-                ><img
-                  src="images/ico_pa4.png"
-                  width="25"
-                  height="25"
-                />诚信网站认证</span
-              >
-              <span
-                ><img
-                  src="images/ico_pa5.png"
-                  width="25"
-                  height="25"
-                />经营性网站备案信息</span
-              >
-              <span
-                ><img
-                  src="images/ico_pa6.png"
-                  width="25"
-                  height="25"
-                />安全联盟</span
-              >
-            </div>
-            <div class="foo_3">
-              经营许可 : 教职成司函[2011]267号 | 京ICP证090121号 |
-              京ICP备11004351号 | 京公网安备110105019074号 | 网络文化经营许可证
-              京网文[2014]0063-0013号<br />
-              VIPABC.com 版权所有 © 2008-2014 全球领先英语真人外教网
-            </div>
+            <div class="clear"></div>
           </div>
-          <div class="clear"></div>
         </div>
       </div>
     </div>
@@ -1850,12 +1852,15 @@
 
         item.addEventListener("click", function () {
           const leftElement = document.getElementById("left");
+          const layoutElement = document.getElementById("layout");
           const leftType = leftElement.dataset.type;
 
           if (leftType === itemType) {
             leftElement.dataset.type = "";
+            layoutElement.dataset.type = "";
           } else {
             leftElement.dataset.type = itemType;
+            layoutElement.dataset.type = itemType;
           }
         });
       });
