--- a/update_time.html
+++ b/update_time.html
@@ -17,29 +17,29 @@
     <link rel="stylesheet" type="text/css" href="css/update_time.css" />
   </head>
   <body>
-    <div class="layout">
-      <div class="update-time-modal">
-        <div class="header">
-          <p class="header-title">變更時間</p>
-          <div class="header-underline"></div>
+    <div class="modal-layout">
+      <div class="update-modal">
+        <div class="modal-header">
+          <p class="modal-header-title">變更時間</p>
+          <div class="modal-header-underline"></div>
         </div>
 
-        <div class="body">
-          <div class="body-header">
-            <p class="body-header-title">原訂課程時間</p>
-            <p class="body-header-time">2021/9/10 週三 20:00</p>
+        <div class="modal-body">
+          <div class="modal-body-header">
+            <p class="modal-body-header-title">原訂課程時間</p>
+            <p class="modal-body-header-time">2021/9/10 週三 20:00</p>
           </div>
 
-          <div class="tab">
-            <div class="tab-item active">
-              <p class="tab-item-text">固定時段</p>
+          <div class="modal-tab">
+            <div class="modal-tab-item active">
+              <p class="modal-tab-item-text">固定時段</p>
             </div>
-            <div class="tab-item">
-              <p class="tab-item-text">專屬時段</p>
+            <div class="modal-tab-item">
+              <p class="modal-tab-item-text">專屬時段</p>
             </div>
           </div>
 
-          <div class="carousel">
+          <div class="modal-carousel">
             <div class="carousel-icon xs previous"></div>
             <div class="carousel-icon xs next"></div>
             <div class="carousel-content">
@@ -84,47 +84,47 @@
             </div>
           </div>
 
-          <div class="time-picker">
-            <div class="time-picker-item">
+          <div class="modal-time-picker">
+            <div class="modal-time-picker-item">
               <p>01:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>02:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>03:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>04:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>05:30</p>
             </div>
-            <div class="time-picker-item active">
+            <div class="modal-time-picker-item active">
               <p>06:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>07:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>08:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>09:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>10:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>11:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>12:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>13:30</p>
             </div>
-            <div class="time-picker-item">
+            <div class="modal-time-picker-item">
               <p>14:30</p>
             </div>
           </div>
@@ -134,16 +134,16 @@
             <p class="update-time-time">2021/9/17 週三 06:30</p>
           </div>
 
-          <div class="action">
-            <button class="action-button button lg">
+          <div class="modal-action">
+            <button class="modal-action-button button lg">
               <p>取消</p>
             </button>
-            <button class="action-button button lg">
+            <button class="modal-action-button button lg">
               <p>確定</p>
             </button>
           </div>
 
-          <div class="comment">
+          <div class="modal-comment">
             <p>無適合的時間嗎？</p>
             <p>我們可另外為您開專屬課程喔，僅須收取４堂</p>
           </div>
