--- a/my_class_with_update_level.html
+++ b/my_class_with_update_level.html
@@ -1593,6 +1593,38 @@
       </div>
     </div>
 
+    <div class="modal-layout">
+      <div class="update-modal">
+        <div class="modal-header">
+          <p class="modal-header-title">變更學習等級</p>
+          <div class="modal-header-underline"></div>
+        </div>
+
+        <div class="modal-body">
+          <p class="update-level-text question">覺得目前學習等級不符合？</p>
+          <p class="update-level-text level-title">你目前的學習等級</p>
+          <p class="update-level-text level-text">一年級</p>
+          <p class="update-level-text update-level">想要調整等級</p>
+
+          <select class="level-select select-tool sm dark">
+            <option selected value="三年級">三年級</option>
+            <option value="四年級">四年級</option>
+            <option value="五年級">五年級</option>
+            <option value="六年級">六年級</option>
+          </select>
+
+          <div class="modal-action">
+            <button class="modal-action-button button lg">
+              <p>取消</p>
+            </button>
+            <button class="modal-action-button button lg">
+              <p>送出</p>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(["_setAccount", "UA-36251023-1"]);
