--- a/update_level.html
+++ b/update_level.html
@@ -19,18 +19,18 @@
     <script src="js/nice-select2.js"></script>
   </head>
   <body>
-    <div class="layout">
-      <div class="update-level-modal">
-        <div class="header">
-          <p class="header-title">變更學習等級</p>
-          <div class="header-underline"></div>
+    <div class="modal-layout">
+      <div class="update-modal">
+        <div class="modal-header">
+          <p class="modal-header-title">變更學習等級</p>
+          <div class="modal-header-underline"></div>
         </div>
 
-        <div class="body">
-          <p class="body-text question">覺得目前學習等級不符合？</p>
-          <p class="body-text level-title">你目前的學習等級</p>
-          <p class="body-text level-text">一年級</p>
-          <p class="body-text update-level">想要調整等級</p>
+        <div class="modal-body">
+          <p class="update-level-text question">覺得目前學習等級不符合？</p>
+          <p class="update-level-text level-title">你目前的學習等級</p>
+          <p class="update-level-text level-text">一年級</p>
+          <p class="update-level-text update-level">想要調整等級</p>
 
           <select class="level-select select-tool sm dark">
             <option selected value="三年級">三年級</option>
@@ -39,11 +39,11 @@
             <option value="六年級">六年級</option>
           </select>
 
-          <div class="action">
-            <button class="action-button button lg">
+          <div class="modal-action">
+            <button class="modal-action-button button lg">
               <p>取消</p>
             </button>
-            <button class="action-button button lg">
+            <button class="modal-action-button button lg">
               <p>送出</p>
             </button>
           </div>
